# DocumentConverter

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md
docs/01-product-requirements/: prd.md
docs/02-development-standards/: 01-collaboration-guide.md  02-doc-format-guide.md  02-documentation-format.md  03-ai-commands-guide.md  03-ai-commands.md
docs/03-technical-design/: architecture.md
docs/03-technical-design/v1.0/: 01-mvp-design.md  02-environment-setup-v1.md  04-cli-v1.md  04-parser-v1.md  05-converter-v1.md  05-testing-v1.md  cli-v1.md  converter-v1.md  environment-setup-v1.md  mvp-design.md  parser-v1.md  testing-v1.md
docs/03-technical-design/v1.1/: pdf-to-markdown-v1.md
docs/04-project-management/: task-list.md
scripts/: run_tests.sh  setup_env.sh
src/: main.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  converter.py  generator.py  parser.py
src/utils/: __init__.py  file_utils.py  logger.py
tests/: test_environment.py
